rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__age_xid.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(r#\"SELECT AGE(0::xid) AS age;\"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+------------+
| age        |
+------------+
| 2147483647 |
+------------+
