rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__array_lower_column.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"\n                SELECT\n                    array_lower(t.v) q\n                FROM (\n                    SELECT ARRAY[1,2,3,4,5] as v UNION ALL\n                    SELECT ARRAY[5,4,3,2,1] as v\n                ) t\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---+
| q |
+---+
| 1 |
| 1 |
+---+
