rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__array_upper_scalar.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"\n                SELECT\n                    array_upper(ARRAY[1,2,3,4,5]) v1,\n                    array_upper(ARRAY[5,4,3]) v2,\n                    array_upper(ARRAY[5,4], 1) v3\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----+----+----+
| v1 | v2 | v3 |
+----+----+----+
| 5  | 3  | 2  |
+----+----+----+
