rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__current_setting.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT current_setting('max_index_keys'), current_setting('search_path')\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----------------------------------------+--------------------------------------+
| current_setting(Utf8("max_index_keys")) | current_setting(Utf8("search_path")) |
+-----------------------------------------+--------------------------------------+
| 32                                      | "$user", public                      |
+-----------------------------------------+--------------------------------------+
