rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_f64_1.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series(-5, 5, 0.5);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+--------------------------------------------------+
| generate_series(Int64(-5),Int64(5),Float64(0.5)) |
+--------------------------------------------------+
| -5                                               |
| -4.5                                             |
| -4                                               |
| -3.5                                             |
| -3                                               |
| -2.5                                             |
| -2                                               |
| -1.5                                             |
| -1                                               |
| -0.5                                             |
| 0                                                |
| 0.5                                              |
| 1                                                |
| 1.5                                              |
| 2                                                |
| 2.5                                              |
| 3                                                |
| 3.5                                              |
| 4                                                |
| 4.5                                              |
| 5                                                |
+--------------------------------------------------+
