rust/cubesql/cubesql/src/compile/test/snapshots/cubesql__compile__test__test_udfs__generate_series_f64_2.snap
---
source: cubesql/src/compile/test/test_udfs.rs
expression: "execute_query(\"SELECT generate_series(-5, 5, 3);\".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------------------+
| generate_series(Int64(-5),Int64(5),Int64(3)) |
+----------------------------------------------+
| -5                                           |
| -2                                           |
| 1                                            |
| 4                                            |
+----------------------------------------------+
